--- a/Q-Tensor-Electric-Fields-Experiment-Fréedericksz-Multiple.ipynb
+++ b/Q-Tensor-Electric-Fields-Experiment-Fréedericksz-Multiple.ipynb
@@ -17,7 +17,14 @@
     "\n",
     "import os\n",
     "if not os.path.exists(\"./Experiment3-Plots\"):\n",
-    "    os.makedirs(\"./Experiment3-Plots\")"
+    "    os.makedirs(\"./Experiment3-Plots\")\n",
+    "\n",
+    "params = {'legend.fontsize': 'x-large',\n",
+    "         'axes.labelsize': 'x-large',\n",
+    "         'axes.titlesize':'x-large',\n",
+    "         'xtick.labelsize':'x-large',\n",
+    "         'ytick.labelsize':'x-large'}\n",
+    "plt.rcParams.update(params)"
    ]
   },
   {
@@ -39,7 +46,7 @@
     "L = 1.\n",
     "\n",
     "# Parameters for electric field\n",
-    "R = 1.\n",
+    "R = 2.\n",
     "eps2 = 0.5\n",
     "eps3 = 0.01\n",
     "eps1 = 2.5\n",
@@ -104,7 +111,47 @@
     "\n",
     "def tens_lo(Q):\n",
     "    return as_tensor([[Zero_func, Zero_func],\n",
-    "                      [Q[0], Q[1]]])"
+    "                      [Q[0], Q[1]]])\n",
+    "\n",
+    "# approximate Heaviside function\n",
+    "steepness = 5\n",
+    "\n",
+    "def H_(x):\n",
+    "    return 1/np.pi * atan(steepness * x) + 0.5\n",
+    "\n",
+    "def DH_(x):\n",
+    "    return 1/np.pi * steepness / (1 + (steepness * x)**2)\n",
+    "\n",
+    "# truncation of one component to R/d, d=2\n",
+    "def TR_1D(x):\n",
+    "    return x * H_(R/2-x) * H_(R/2+x) + R/2*H_(x-R/2) - R/2*H_(-x-R/2)\n",
+    "\n",
+    "# derivative of TR_1D\n",
+    "def calP_1D(x):\n",
+    "    return H_(R/2-x)*H_(R/2+x) - x*DH_(R/2-x)*H_(R/2+x) + x*H_(R/2-x)*DH_(R/2+x) + R/2*DH_(x-R/2) + R/2*DH_(-x-R/2)\n",
+    "\n",
+    "# now if Q is a tensor\n",
+    "def TR(Q):\n",
+    "    return as_tensor([[TR_1D(Q[0, 0]), TR_1D(Q[0, 1])], \n",
+    "                      [TR_1D(Q[1, 0]), TR_1D(Q[1, 1])]])\n",
+    "\n",
+    "def calP(Q):\n",
+    "    return as_tensor([[calP_1D(Q[0, 0]), calP_1D(Q[0, 1])], \n",
+    "                      [calP_1D(Q[1, 0]), calP_1D(Q[1, 1])]])\n",
+    "\n",
+    "def calP_h(Q1, Q0):\n",
+    "    P11 = calP_1D(Q0[0, 0])\n",
+    "    P12 = calP_1D(Q0[0, 1])\n",
+    "    P21 = calP_1D(Q0[1, 0])\n",
+    "    P22 = calP_1D(Q0[1, 1])\n",
+    "    \n",
+    "    res = as_tensor([[P11, P12],\n",
+    "                      [P21, P22]])\n",
+    "    return res\n",
+    "\n",
+    "def element_mult(A, B):\n",
+    "    return as_tensor([[A[0, 0] * B[0, 0], A[0, 1] * B[0, 1]], \n",
+    "                      [A[1, 0] * B[1, 0], A[1, 1] * B[1, 1]]])"
    ]
   },
   {
@@ -193,7 +240,7 @@
     "    u0 = Function(u_space)\n",
     "    v = TestFunction(u_space)\n",
     "\n",
-    "    L_elliptic = inner(grad(u0) + eps2*tens(Q0)*grad(u0) + eps3*div(tens(Q0)), grad(v))*dx\n",
+    "    L_elliptic = inner(grad(u0) + eps2*TR(tens(Q0))*grad(u0) + eps3*div(tens(Q0)), grad(v))*dx\n",
     "\n",
     "    # define boundary condition for u0\n",
     "    t = 0.0\n",
@@ -221,20 +268,14 @@
     "    Q, u = split(Qu)\n",
     "\n",
     "    # Weak statement of the equation\n",
-    "    L_form = inner(tens(Q - Q0), tens_hi(q))*dx\\\n",
-    "        + M*L*dt/2*inner(grad(tens(Q+Q0)), grad(tens_hi(q)))*dx\\\n",
-    "        + M*dt*inner(dF1_dQ(tens(Q)), tens_hi(q))*dx\\\n",
-    "        - M*dt*inner(dF2_dQ(tens(Q0)), tens_hi(q))*dx\\\n",
-    "        - M*eps2*dt/2*inner(outer(grad(u0), grad(u)) - (1/n)*tr(outer(grad(u0), grad(u)))*I, tens_hi(q))*dx\\\n",
-    "        - M*eps3*dt/2*(inner(grad(u+u0), div(sym(tens_hi(q))))*dx - (1/n)*inner(grad(u+u0), grad(tr(tens_hi(q))))*dx)\\\n",
-    "        + inner(tens(Q - Q0), tens_lo(r))*dx\\\n",
-    "        + M*L*dt/2*inner(grad(tens(Q+Q0)), grad(tens_lo(r)))*dx\\\n",
-    "        + M*dt*inner(dF1_dQ(tens(Q)), tens_lo(r))*dx\\\n",
-    "        - M*dt*inner(dF2_dQ(tens(Q0)), tens_lo(r))*dx\\\n",
-    "        - M*eps2*dt/2*inner(outer(grad(u0), grad(u)) - (1/n)*tr(outer(grad(u0), grad(u)))*I, tens_lo(r))*dx\\\n",
-    "        - M*eps3*dt/2*(inner(grad(u+u0), div(sym(tens_lo(r))))*dx - (1/n)*inner(grad(u+u0), grad(tr(tens_lo(r))))*dx)\\\n",
-    "        + inner(grad(u) + eps2*tens(Q)*grad(u) + eps3*div(tens(Q)), grad(v))*dx\n",
-    "\n",
+    "    L_form = inner(tens(Q - Q0), tens(q))*dx\\\n",
+    "        + M*L*dt/2*inner(grad(tens(Q+Q0)), grad(tens(q)))*dx\\\n",
+    "        + M*dt*inner(dF1_dQ(tens(Q)), tens(q))*dx\\\n",
+    "        - M*dt*inner(dF2_dQ(tens(Q0)), tens(q))*dx\\\n",
+    "        - M*eps2*dt/2*(inner(element_mult(calP_h(tens(Q), tens(Q0)), outer(grad(u0), grad(u))) - (1/n)*tr(element_mult(calP_h(tens(Q), tens(Q0)), outer(grad(u0), grad(u))))*I, tens(q))*dx)\\\n",
+    "        - M*eps3*dt/2*(inner(grad(u+u0), div(sym(tens_hi(q))))*dx - (1/n)*inner(grad(u+u0), grad(tr(tens(q))))*dx)\\\n",
+    "        + dt*inner(grad(u) + eps2*TR(tens(Q))*grad(u) + eps3*div(tens(Q)), grad(v))*dx\n",
+    "    \n",
     "    a_form = derivative(L_form, Qu, dQu)\n",
     "\n",
     "    # boundary conditions for Q do not change\n",
@@ -345,17 +386,18 @@
     "    \n",
     "    norm = mpl.colors.Normalize(vmin=np.min(solutions_u), vmax=np.max(solutions_u))\n",
     "    if abs(time*dt - 2) <= 1e-4:\n",
-    "        cbar = ax.figure.colorbar(mpl.cm.ScalarMappable(norm=norm), ax=out.ax)\n",
+    "        cbar = ax.figure.colorbar(mpl.cm.ScalarMappable(norm=norm))\n",
     "\n",
     "    print(f\"{times[time]:.2f}\")\n",
     "    if time*dt >= 0.75*T:\n",
-    "        plt.title(f\"Extension = ${efs:.2f}\\cdot x$\")#\\n$t={times[time]:.2f}$\")\n",
+    "        plt.title(f\"Extension = ${efs:.2f}\\cdot x$\")\n",
     "    elif time*dt >= 0.5*T:\n",
-    "        plt.title(f\"Extension = ${2*efs/3:.2f}\\cdot x$\")#\\n$t={times[time]:.2f}$\")\n",
+    "        plt.title(f\"Extension = ${2*efs/3:.2f}\\cdot x$\")\n",
     "    elif time*dt >= 0.25*T:\n",
-    "        plt.title(f\"Extension = ${efs/3:.2f}\\cdot x$\")#\\n$t={times[time]:.2f}$\")\n",
+    "        plt.title(f\"Extension = ${efs/3:.2f}\\cdot x$\")\n",
     "    else:\n",
-    "        plt.title(f\"Extension $\\equiv 0$\")#\\n$t={times[time]:.2f}$\")\n",
+    "        plt.title(f\"Extension $\\equiv 0$\")\n",
+    "    plt.savefig(f\"./Experiment3-Plots/experiment3_{time}.pdf\", bbox_inches='tight')\n",
     "    plt.savefig(f\"./Experiment3-Plots/experiment3_{time}.png\", bbox_inches='tight')\n",
     "    plt.show()"
    ]
@@ -410,7 +452,7 @@
     "plt.plot(strengths, fractions)\n",
     "plt.ylabel(\"Average of Director Angle$\\cdot(\\pi/2)^{-1}$\")\n",
     "plt.xlabel(\"Electric Field Strength\")\n",
-    "plt.savefig(\"./Experiment3-Plots/Fréedericksz_transition.png\", bbox_inches='tight')\n",
+    "plt.savefig(\"./Experiment3-Plots/Fréedericksz_transition.pdf\", bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -439,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
